--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "php": "~5.4"
+        "php": "~5.4",
+        "subscribo/config": "@dev"
     },
     "suggest": {
         "laravel/laravel": "This package have been developed to work with The Laravel Framework 4.2",
